[gd_scene load_steps=5 format=3 uid="uid://cfmmn7nsbg52p"]

[ext_resource type="Texture2D" uid="uid://dl5bj3baipn27" path="res://Placeholder images/Shop.webp" id="1_8a35b"]
[ext_resource type="Script" path="res://shop.gd" id="1_lpsqw"]
[ext_resource type="PackedScene" uid="uid://5d3tqv04v3df" path="res://shop_menu.tscn" id="3_i3ak6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1n8v2"]
size = Vector2(352, 320)

[node name="Shop" type="Area2D"]
script = ExtResource("1_lpsqw")

[node name="Shop" type="Sprite2D" parent="."]
position = Vector2(873.25, 153.938)
scale = Vector2(0.508594, 0.454011)
texture = ExtResource("1_8a35b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(871, 165)
shape = SubResource("RectangleShape2D_1n8v2")

[node name="Shop_Menu" parent="." instance=ExtResource("3_i3ak6")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
